--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -1,4 +1,8 @@
-   <div class="form-group">
+<hr/>
+
+<h4>Mobile Protocol</h4>
+<hr/>
+<div class="form-group">
        <label for="exampleInputPassword1">Username</label>
         <input type="text" class="form-control" ng-model="username" placeholder="Username">
     </div>           
