--- a/pages/oikothen.html
+++ b/pages/oikothen.html
@@ -1,20 +1,13 @@
- <h4>Mobile Protocol</h4>
-        <hr/>
-        <div class ="form-group" ng-model="drop"  >
-            <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Επιλογή
-              </button>
-                 <a>Οίκοθεν</a> 
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#!outgoing">Εξερχόμενο</a>
-                <a class="dropdown-item" href="#!oikothen">Οίκοθεν</a>
-                <a class="dropdown-item" href="#!home">Εισερχόμενο</a>
-              </div>
-        </div>
-        </div>
-         <hr/>
+        <h2 align="center" >Mobile Protocol</h2>
+        <h4  align="center" >Οίκοθεν</h4>
 
+            <div align="center">
+                <hr/>
+                <a class="btn btn-primary" href="#!outgoing" role="button">Εξερχόμενο</a>
+                <a class="btn btn-primary" href="#!oikothen" role="button">Οίκοθεν</a>
+                <a class="btn btn-primary" href="#!home" role="button">Εισερχόμενο</a>
+                <hr/>
+            </div>
 
             <div class="form-group">
                 <label >Θέμα Οίκοθεν</label>
@@ -24,21 +17,36 @@
               <div class="form-group">
                 <label>Αποδέκτης</label>
                 <input type="text" class="form-control" ng-model="receiverOik" placeholder="Αποδέκτης">
-              </div>           
-              <div class="form-group" >
+              </div>
+                
+
+<!--
+              <div class="form-group">
                 <label >Ημερομηνία εξόδου</label>
                 <input type="text" class="form-control" ng-model="outDayOik"  placeholder="Ημερομηνία εξόδου">       
               </div >
-                <div class="form-group"  ng-hide = "numOik" >
+-->
+                <label>Ημερομηνία εξόδου</label>
+                <input id="datepicker" width="276" type="text" placeholder = "Ημερομηνία εξαγωγής" ng-model="outDayOik"/>
+                <script>
+                           $('#datepicker').datepicker({
+                            uiLibrary: 'bootstrap4',
+                            format: 'dd/mm/yyyy'
+                        });
+     
+                </script>
+                <div class="form-group"  ng-hide = "numOik">
                 <label >Αριθμός πρωτοκόλου</label>
                 <input type="text" class="form-control" ng-model="numberOik"  placeholder="Αριθμός Πρωτοκόλου">       
               </div>
-            <button class="btn btn-primary" ng-click= "oikothen()" >Δημιουργία Οίκοθεν Αρχείου</button> 
-            <hr/ ng-hide="fileOik" >
-            <form method="POST" enctype="multipart/form-data" ng-hide="fileOik" action="http://localhost:8080/api/upload/">
-                    <table>
-                        <tr><td >File to upload:</td><td><input type="file" name="file" ng-hide="file" /></td></tr>
-                        <tr><td></td><td><input type="submit" ng-click= "ProtNum()" value="Upload"/></td></tr>
-                    </table>
+                <div align="center">
+                    <button class="btn btn-primary" ng-click= "oikothen()" >Δημιουργία Οίκοθεν Αρχείου</button>
+                </div>
+                <hr/ ng-hide="fileOik">
+                <form method="POST" enctype="multipart/form-data" ng-hide="fileOik" action="http://localhost:8080/api/upload/">
+                        <table>
+                            <tr><td >Επισύναψη αρχείου:</td><td><input type="file" name="file" ng-hide="file" /></td></tr>
+                            <tr><td></td><td><input type="submit" ng-click= "ProtNum()" value="Upload"/></td></tr>
+                        </table>
                 </form>
-         <hr/ ng-hide="fileOik" >
+                <hr/ ng-hide="fileOik">
