--- a/pages/outgoing.html
+++ b/pages/outgoing.html
@@ -6,6 +6,7 @@
                 <a class="btn btn-primary" href="#!outgoing" role="button">Εξερχόμενο</a>
                 <a class="btn btn-primary" href="#!oikothen" role="button">Οίκοθεν</a>
                 <a class="btn btn-primary" href="#!home" role="button">Εισερχόμενο</a>
+                <a class="btn btn-primary" href="#!update" role="button">Ενημέρωση πρωτόκολου</a>
                 <hr/>
             </div>
 
