--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -8,6 +8,6 @@
         </div>           
       <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="text" class="form-control" ng-model="password" placeholder="Password">
+            <input type="password" class="form-control" ng-model="password" placeholder="Password">
         </div>
      <button class="btn btn-primary" ng-click= "signIn()" >Sign In</button>
