--- a/pages/outgoing.html
+++ b/pages/outgoing.html
@@ -24,15 +24,24 @@
                 <input type="text" class="form-control" ng-model="subject" aria-describedby="emailHelp" placeholder="Θέμα">
                 <small id="themeHelp" class="form-text text-muted">Βοηθητικό κείμενο.</small>
               </div>
-              <div class="form-group">
-                <label>Αποδέκτης</label>
-                <input type="text" class="form-control" ng-model="receiver" placeholder="Αποδέκτης">
-              </div>
-              <div class="form-group">
-                <label >Κοινοποίηση</label>
-                <input type="text" class="form-control" ng-model="shared" aria-describedby="emailHelp" placeholder="Κοινοποίηση">
-                <small id="themeHelp" class="form-text text-muted">Βοηθητικό κείμενο.</small>
-              </div>
+
+                <div  class="form-group">
+                    <label>Αποδέκτης</label>
+                    <input list="names" class="form-control" ng-model="receiver" placeholder="Αποδέκτης" />
+                    <datalist id="names" >  
+                        <option  ng-repeat="x in senders">{{x.name}}</option>
+                    </datalist>
+                </div>  
+
+                <div  class="form-group">
+                    <label>Κοινοποίηση</label>
+                    <input list="names" class="form-control" ng-model="shared" placeholder="Κοινοποίηση" />
+                    <datalist id="names" >  
+                        <option  ng-repeat="x in senders">{{x.name}}</option>
+                    </datalist>
+                </div>
+                
+                
                 <label >Ημερομηνία εξόδου</label>
                 <input id="datepicker" width="276" type="text" placeholder = "Ημερομηνία εξαγωγής" ng-model="outDate"/>
                 <script>
