--- a/pages/update.html
+++ b/pages/update.html
@@ -14,14 +14,20 @@
                 <label >Αριθμός Πρωτοκόλου</label>
                 <input type="text" class="form-control" ng-model="number" ng-hide="num" placeholder="Αριθμός Πρωτοκόλου">       
               </div>
+
             <div class="form-group">
                 <label >Θέμα Εισερχομένου</label>
                 <input type="text" class="form-control" ng-model="subject" aria-describedby="emailHelp" placeholder="Θέμα">
                 <small class="form-text text-muted">Βοηθητικό κείμενο.</small>
               </div>
-              <div class="form-group">
-                <label>Αποστολέας</label>
-                <input type="text" class="form-control" ng-model="sender" placeholder="Αποστολέας">
+
+
+             <div  class="form-group">
+                    <label>Αποστολέας</label>
+                    <input list="names" class="form-control" ng-model="sender" placeholder="Αποστολέας" />
+                    <datalist id="names" >  
+                        <option  ng-repeat="x in senders">{{x.name}}</option>
+                    </datalist>
                 </div>
 
                 <div class="form-check">
