--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -10,4 +10,8 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" ng-model="password" placeholder="Password">
         </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Usage</label>
+            <input type="text" class="form-control" ng-model="usage" placeholder="Usage">
+        </div>
      <button class="btn btn-primary" ng-click= "signIn()" >Sign In</button>
