--- a/pages/update.html
+++ b/pages/update.html
@@ -1,15 +1,6 @@
         <h2 align="center" >Mobile Protocol</h2>
         <h4  align="center" >Ενημέρωση πρωτόκολου</h4>
     
-            <div align="center">
-                <hr/>
-                <a class="btn btn-primary" href="#!outgoing" role="button">Εξερχόμενο</a>
-                <a class="btn btn-primary" href="#!oikothen" role="button">Οίκοθεν</a>
-                <a class="btn btn-primary" href="#!home" role="button">Εισερχόμενο</a>
-                <a class="btn btn-primary" href="#!update" role="button">Ενημέρωση πρωτόκολου</a>
-                <hr/>
-            </div>
-
             <div class="form-group" ng-hide="num"  >
                 <label >Αριθμός Πρωτοκόλου</label>
                 <input type="text" class="form-control" ng-model="number" ng-hide="num" placeholder="Αριθμός Πρωτοκόλου">       
@@ -28,6 +19,15 @@
                     <datalist id="names" >  
                         <option  ng-repeat="x in senders">{{x.name}}</option>
                     </datalist>
+                </div>
+
+                <div  class="form-group">
+                    <label>Κατάσταση Εγγράφου</label>
+                    <input id = "first" list="usages" class="form-control" ng-model="usage" placeholder="Κατάσταση Εγγράφου" />
+                    <datalist id="usages" >  
+                        <option  ng-repeat="x in usages.states.status" >{{x.description}}</option>
+                    </datalist>
+
                 </div>
 
                 <div class="form-check">
